# usf_django

./: .gitignore  .importlinter  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
tests/: factories.py  test_hello_world.py
tests/auditor/: test_due_payments.py
tests/e2e/: test_buying.py
tests/insurance/: test_insurance_fee.py
tests/products/: test_adding.py  test_product_availability.py  test_product_availability_repository.py
tests/utils/: test_insurance_fee.py
usf/: container.py  manage.py
usf/ext/: __init__.py  models.py  typed_signal.py
usf/insurance/: public.py
usf/orders/: apps.py  django_order_repository.py  models.py  order.py  order_dto.py  order_id.py  order_repository.py  public.py  serializers.py  services.py  urls.py  views.py
usf/orders/app/: facade.py  order_dto.py  order_repository.py  services.py
usf/orders/domain/: order.py
usf/orders/migrations/: 0001_initial.py  0002_remove_order_payment_remove_order_product_and_more.py
usf/payments/: apps.py  events.py  models.py  payment_intents.py  public.py  serializers.py  services.py  signals.py  urls.py  utils.py  views.py
usf/payments/migrations/: 0001_initial.py  0002_payment_payment_intent_id.py
usf/products/: admin.py  models.py  ports.py  product_availability.py  product_availability_repository.py  public.py  reservation.py  reservation_policies.py  serializers.py  services.py  urls.py  views.py
usf/products/migrations/: 0001_initial.py  0002_productavailabilitymodel.py  0003_remove_productavailabilitymodel_product_id_and_more.py
usf/shared/: __init__.py  product_id.py
usf/users/: adapters.py  apps.py
usf/usf/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
usf/utils/: insurance_fee.py  payment_id.py  user_id.py
