[project]
name = "usf_django"
version = "0.0.0"
description = "Used Stuff Market - in Django. Training ground"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.4.0",
    "django>=5.1.5",
    "django-ninja>=1.3.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.4.0",
    "httpx>=0.28.1",
    "lagom>=2.7.5",
    "psycopg2-binary>=2.9.10",
    "redis>=5.2.1",
    "unleashclient>=6.0.1",
    "django-money>=3.5.3",
]

[tool.uv]
dev-dependencies = [
    "celery-types>=0.22.0",
    "django-stubs>=5.1.2",
    "djangorestframework-stubs>=3.15.2",
    "factory-boy>=3.3.1",
    "hypothesis>=6.124.5",
    "import-linter>=2.1",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-django>=4.9.0",
    "pytest-httpx>=0.35.0",
    "pytest-mockito>=0.0.4",
    "ruff",
    "time-machine>=2.16.0",
]

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = ["I", "S"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["S101"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "usf.settings"
pythonpath = [
  "usf"
]
addopts = "-p no:warnings"
